--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -21,6 +21,7 @@ h1,h2,h3,h4,h5,h6,p {
 a {
     text-decoration: none;
     cursor: pointer;
+    flex-direction: column;
 }
 //fin de resets
 
@@ -70,7 +71,7 @@ a {
             position: absolute;
             left: 0;
             width: 100%;
-            background: blue; //colocar color real 
+            background: blue; 
             top: 44px;
             padding: 24px 16px 0;
             .link-menu{
@@ -97,7 +98,11 @@ a {
     border: none;
     font-weight: 600;
     font-family: 'IBM Plex Mono', monospace;
-
+    align-items: center;
+}
+.btn-primary:hover{
+    background-image: linear-gradient(225deg, #0000FE 0%, #00F0B8 100%);
+    color: #ffffff;
 }
 //Buttons terminado
 
@@ -122,6 +127,8 @@ a {
     padding: 0 16px;
     margin-top: 30px;
     margin-bottom: 24px;
+    display:flex;
+    flex-direction: column;
     .tittle {
         font-size: 36px;
         line-height: 42px;
@@ -159,9 +166,15 @@ a {
     .podcast-container {
         margin-bottom: 11px;
         line-height: 0;
-        &:last-child {
-            margin-bottom: 0;
-        }
+    }
+    .iframe{
+        width: 100%;
+        height: 232px;
+        background-color: transparent;
+        border-width: 0px;
+        border-style: initial;
+        border-color: initial;
+        border-image: initial;
     }
 }
 //podcasts terminado
@@ -227,6 +240,20 @@ a {
                 background: transparent; //colocar color real 
                 top: auto;
                 padding: 0;
+                nav, ul, li{
+                    display:inline-block;
+                }
+                nav, ul, li, a:hover{
+                    color: #00F3BB;
+                    transition:.1s;
+                }
+                nav, ul, li, a:hover:after{
+                    -webkit-transform:translateX(1) scaleX( 20%);
+                     transform:translateX(1) scaleX(20%);
+                }
+                a:hover{
+                    text-decoration: line-through;
+                }
                 .link-menu {
                     color:#060A24;
                     padding-bottom: 0;
@@ -256,13 +283,19 @@ a {
             margin-bottom: 56px;
             width: 628px;
         }
+        span{
+            color: #0000EC ;
+        }
     }
     .btn-primary {
         width: 220px;
         height: 56px;
         min-width: 220px;
         font-size: 18px;
-
+    }
+    .btn-primary:hover{
+        background-image: linear-gradient(225deg, #0000FE 0%, #00F0B8 100%);
+        color: #ffffff;
     }
 
     //podcasts inicio
@@ -285,6 +318,7 @@ a {
             flex-wrap: wrap;
             margin: -36px; 
             max-width: 1440px; 
+            width: 100%;
         }
         .podcast-container {
             width: 50%;
