--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -188,7 +188,7 @@ a {
         line-height: 0;
         position: relative;
         z-index: 2;
-        margin: -120 auto 27px;
+        margin: -120px auto 27px;
         .phone-image{
             width: 100%;
            
@@ -247,6 +247,99 @@ a {
 }
 //section gallery terminado
 
+//section topics inicio
+.topics {
+    display: flex;
+    position: relative;
+    margin-top: 5px;
+    margin-bottom: 8px;
+    flex-flow: column;
+    .tittle,
+    .topic-list {
+        z-index: 0;
+    }
+    .tittle {
+        padding: 20px;
+        margin-bottom: 8px;
+        line-height: 42px;
+        font-weight: 400;
+        font-size: 36px;
+        color: #060A24;
+        font-family: 'IBM Plex Sans', sans-serif;
+    }
+    .container-topics {
+        margin: 35px;
+        margin-bottom: 30px;
+        text-align: center;
+        color: #060A24;
+        font-family: 'IBM Plex Sans', sans-serif;
+    }
+}
+//section topics terminado
+
+.final-background {
+    display: flex;
+    z-index: -5;
+    position: relative;
+    width: auto;
+    padding: 50px;
+    overflow: hidden;
+    align-items: center;
+    background-image: linear-gradient(225deg, #0000ff 0%, #0000a3 100%);
+    clip-path: polygon(0% 20%, 100% 0%, 100% 100%, 0% 100%);
+    .btn-primary {
+        max-width: 320px;
+        width: 100%;
+        height: 48px;
+        text-transform: uppercase;
+        color: #060A24;
+        background: #00F3BB;
+        border: none;
+        font-weight: 600;
+        font-family: 'IBM Plex Mono', monospace;
+    }
+    .btn-primary:hover {
+        color: #ffffff;
+        background-image: linear-gradient(225deg, #0000FE 0%, #00F0B8 100%);
+    }
+    .tittle {
+        padding: 0 10px 30px;
+        text-align: center;
+        align-content: center;
+        color: white;
+        font-size: 36px;
+        line-height: 42px;
+        font-weight: 400;
+        font-family: 'IBM Plex Sans', sans-serif;
+    }
+}
+
+//section footer inicio
+.footer {
+    padding: 10px;
+    text-align: center;
+    line-height: 16px;
+    letter-spacing: 0;
+    color: #060A24;
+    font-size: 14px;
+    font-family: 'IBM Plex Mono', monospace;
+    .final-logos {
+        width: 16px;
+        font-size: 16px;
+        line-height: 28px;
+    }
+    .icon {
+        margin: 12px;
+        font-family: "Font Awesome 5 Brands";;
+    }
+    .tittle {
+        color: #060A24;
+        font-size: 14px;
+        font-family: 'IBM Plex Mono', monospace;
+    }
+}
+//section footer terminado
+
 //media queries
 @media (min-width: 1280px){
     //header inicio
@@ -280,8 +373,8 @@ a {
                     transition:.1s;
                 }
                 nav, ul, li, a:hover:after{
-                    -webkit-transform:translateX(1) scaleX( 20%);
-                     transform:translateX(1) scaleX(20%);
+                    -webkit-transform:translateX(1%) scaleX( 20%);
+                     transform:translateX(1%) scaleX(20%);
                 }
                 a:hover{
                     text-decoration: line-through;
@@ -430,4 +523,94 @@ a {
         }
     }
     //section gallery terminado
+    
+    //section topics inicio
+    .topics {
+        flex-flow: column;
+        display: flex;
+        position: relative;
+        padding: 10px;
+        margin-top: 10px;
+        margin-bottom: 20px;
+        .tittle,
+        .topic-list {
+            padding: 0 80px;
+            z-index: 2;
+        }
+        .tittle {
+            max-width: 1440px;
+            padding-left: 120px;
+            margin-top: -100px;
+            line-height: 48px;
+            font-size: 48px;
+            color: #060A24;
+        }
+        .container-topics {
+            display: inline-block;
+            margin-bottom: 8px;
+            padding: 4px 35px;
+            text-align: center;
+            color: #060A24;
+            font-family: 'IBM Plex Sans', sans-serif;
+        }
+    }
+    //section topics terminado
+    
+    .final-background {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 125px 100px 200px;
+        background-image: linear-gradient(225deg, #0000FF 0%, #0000A3 100%);
+        clip-path: polygon(0% 20%, 100% 0%, 100% 100%, 0% 100%);
+        .tittle {
+            color: white;
+            padding-left: 2px;
+            text-align: center;
+            font-size: 48px;
+            line-height: 42px;
+            font-weight: 400;
+            font-family: 'IBM Plex Sans', sans-serif;
+        }
+        .btn-primary {
+            max-width: 320px;
+            width: 100%;
+            height: 48px;
+            text-transform: uppercase;
+            color: #060A24;
+            background: #00F3BB;
+            border: none;
+            font-weight: 600;
+            font-family: 'IBM Plex Mono', monospace;
+        }
+        .btn-primary:hover {
+            color: #ffffff;
+            background-image: linear-gradient(225deg, #0000FE 0%, #00F0B8 100%);
+        }
+    }
+
+    //section footer inicio
+    .footer {
+        display: flex;
+        padding: 10px;
+        font-family: 'IBM Plex Mono', monospace;
+        .final-logos {
+            display: flex;
+            width: 45%;
+        }
+        .a {
+            margin: 5px;
+            font-family: "Font Awesome 5 Brands";
+        }
+        .tittle {
+            width: 35%;
+            line-height: 58px;
+            font-size: 16px;
+            color: #060A24;
+            letter-spacing: 0;
+        }
+    }
+    //section footer terminado
+
+
 }
