--- a/sass/styles.css
+++ b/sass/styles.css
@@ -361,6 +361,7 @@ a {
 }
 
 .footer .final-logos {
+  margin-bottom: 30px;
   width: 16px;
   font-size: 16px;
   line-height: 28px;
@@ -416,6 +417,11 @@ a {
     transform: translateX(1%) scaleX(20%);
   }
   .header .links-menu .list-menu a:hover {
+    text-decoration: line-through;
+  }
+  .header .links-menu .list-menu a:active {
+    color: #060A24;
+    opacity: 56%;
     text-decoration: line-through;
   }
   .header .links-menu .list-menu .link-menu {
@@ -638,6 +644,8 @@ a {
     border: none;
     font-weight: 600;
     font-family: 'IBM Plex Mono', monospace;
+    position: relative;
+    z-index: 2;
   }
   .final-background .btn-primary:hover {
     color: #ffffff;
