--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -297,6 +297,7 @@ a {
         border: none;
         font-weight: 600;
         font-family: 'IBM Plex Mono', monospace;
+       
     }
     .btn-primary:hover {
         color: #ffffff;
@@ -324,6 +325,7 @@ a {
     font-size: 14px;
     font-family: 'IBM Plex Mono', monospace;
     .final-logos {
+        margin-bottom: 30px;
         width: 16px;
         font-size: 16px;
         line-height: 28px;
@@ -379,6 +381,11 @@ a {
                 a:hover{
                     text-decoration: line-through;
                 }
+                a:active {
+                    color: #060A24;
+                    opacity: 56%;
+                    text-decoration: line-through;
+                }
                 .link-menu {
                     color:#060A24;
                     padding-bottom: 0;
@@ -417,6 +424,7 @@ a {
         height: 56px;
         min-width: 220px;
         font-size: 18px;
+       
     }
     .btn-primary:hover{
         background-image: linear-gradient(225deg, #0000FE 0%, #00F0B8 100%);
@@ -582,12 +590,14 @@ a {
             border: none;
             font-weight: 600;
             font-family: 'IBM Plex Mono', monospace;
+            position: relative;
+            z-index: 2;
         }
         .btn-primary:hover {
             color: #ffffff;
             background-image: linear-gradient(225deg, #0000FE 0%, #00F0B8 100%);
         }
-    }
+    }                 
 
     //section footer inicio
     .footer {
