--- a/sass/styles.css
+++ b/sass/styles.css
@@ -308,7 +308,7 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  z-index: -5;
+  z-index: 0;
   position: relative;
   width: auto;
   padding: 50px;
@@ -644,12 +644,10 @@ a {
     border: none;
     font-weight: 600;
     font-family: 'IBM Plex Mono', monospace;
-    position: relative;
-    z-index: 2;
   }
   .final-background .btn-primary:hover {
     color: #ffffff;
-    background-image: linear-gradient(225deg, #0000FE 0%, #00F0B8 100%);
+    background: linear-gradient(225deg, #0000FE 0%, #00F0B8 100%);
   }
   .footer {
     display: -webkit-box;
