--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -279,7 +279,7 @@ a {
 
 .final-background {
     display: flex;
-    z-index: -5;
+    z-index: 0;
     position: relative;
     width: auto;
     padding: 50px;
@@ -579,7 +579,7 @@ a {
             line-height: 42px;
             font-weight: 400;
             font-family: 'IBM Plex Sans', sans-serif;
-        }
+        }             
         .btn-primary {
             max-width: 320px;
             width: 100%;
@@ -590,12 +590,11 @@ a {
             border: none;
             font-weight: 600;
             font-family: 'IBM Plex Mono', monospace;
-            position: relative;
-            z-index: 2;
+            
         }
         .btn-primary:hover {
             color: #ffffff;
-            background-image: linear-gradient(225deg, #0000FE 0%, #00F0B8 100%);
+            background: linear-gradient(225deg, #0000FE 0%, #00F0B8 100%);
         }
     }                 
 
